Refactor constructors across multiple domain classes to simplify initialization